@@ -155,8 +155,19 @@ if test "$GCC" = "yes" ; then
 fi
 
 dnl Generate special flags for apxs, which doesn't understand compiler flags.
+dnl We have to do this with KRB5_LIBS and DEPEND_LIBS as well, since Heimdal
+dnl likes to put -pthread into the compiler flags and apxs doesn't understand
+dnl it.
 APXS_CFLAGS=-Wc,`echo "$CFLAGS" | sed 's/ / -Wc,/g'`
+APXS_DEPEND_LIBS=`echo "$DEPEND_LIBS" \
+    | sed 's/-pthread/-Wc,-pthread -Wl,-lpthread/' \
+    | sed 's/-pthreads/-Wc,-pthreads -Wl,-lpthreads/'`
+APXS_KRB5_LIBS=`echo "$KRB5_LIBS" \
+    | sed 's/-pthread/-Wc,-pthread -Wl,-lpthread/' \
+    | sed 's/-pthreads/-Wc,-pthreads -Wl,-lpthreads/'`
 AC_SUBST([APXS_CFLAGS])
+AC_SUBST([APXS_DEPEND_LIBS])
+AC_SUBST([APXS_KRB5_LIBS])
 
 dnl If and only if we're on Linux, use a mapfile to do symbol versioning and
 dnl make sure that all symbols in the library are resolved.  We'd like to do
